PR feedback
Signed-off-by: Dan Cunningham <dan@digitaldan.com>